--- a/SiteContagem/Views/Home/Index.cshtml
+++ b/SiteContagem/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bem-vindo(a) ao Azure Experts!</h1>
+    <h1 class="display-4">Bem-vindo(a) Camarada!</h1>
     <p><b>Contador - Valor atual:</b> @TempData["Contador"]</p>
     <p><b>Local (Máquina | Container | Pod):</b> @TempData["Local"]</p>
     <p><b>Simulação de Falha:</b> @TempData["SimulacaoFalha"]</p>
